@@ -2,6 +2,7 @@
 
   Fixed csform setting for Oracle 8.0.
   Fixed csform setting for some UTF8 cases.
+  Fixed truncation error on fetch into UTF8 charset thanks to Honza Pazdziora.
   Fixed INTERVAL DAY TO SECOND thanks to Honza Pazdziora.
   Fixed undef warnings when connecting with undef $user.
   Fixed LOB streaming example thanks to Pablo Zorzoli.
